--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
   <!-- About Section -->
   <div data-js="section" id="sectionAbout">
-    <section class="container py-5" id="about">
+    <section class="container py-2" id="about">
+      <h1 style="font-weight: 800;" class="titleSection titleMobile">Sobre</h1>
       <div class="row about-infos">
         <div class="col-md-6 img-about-container">
           <img style="border: 2px solid #097fd9; border-radius: 10px;" width="500px" height="350px" class="img-fluid"
@@ -95,7 +96,7 @@
             Bootstrap, Materialize e React. Além disso, visando atender o interesse dos meus clientes em
             projetos que abrajam tanto o front quanto backend, me dediquei também em dominar o NodeJS e
             os bancos de dados MySQL e mongoDB.</p>
-          <a class="btn btn-primary btn-lg mb-2" href="Curriculo-Igor.pdf" download="Igor-Fonseca-Curriculo.pdf">Download
+          <a class="btn btn-primary btn-lg mb-2 downloadButton" href="Curriculo-Igor.pdf" download="Igor-Fonseca-Curriculo.pdf">Download
             CV
             <i class="fa-solid fa-cloud-arrow-down"></i>
           </a>
@@ -131,8 +132,7 @@
           <span class="material-symbols-outlined">code</span>
           <h3 class="skillColorTitle mt-4 h4">Back-end Development</h3>
           <p class="skillColor text-center mt-3">Competente em programação server-side, aplicando tecnologias como
-            Node.js,
-            Express e na administração de bancos de dados, como MongoDB e MySQL.
+            Node.js, firebase, e na administração de bancos de dados, como MongoDB e MySQL.
             MongoDB e MySQL.</p>
         </div>
         <div class="skillsCards moveCards card mt-5 d-flex flex-column align-items-center text-center p-4"
