--- a/app.html
+++ b/app.html
@@ -1,89 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f5f5f5;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Card Example</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
 
-    .card {
-      max-width: 400px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      transition: transform 0.3s;
-    }
+        .card {
+            width: 400px;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            scroll-snap-type: x mandatory;
+        }
 
-    .card:hover {
-      transform: scale(1.05);
-    }
+        .card img {
+            width: 100%;
+            height: auto;
+            padding: 10px; /* Adicionando padding à imagem */
+            border-bottom: 1px solid #ddd;
+        }
 
-    .card img {
-      width: 100%;
-      height: auto;
-    }
+        .card-content {
+            padding: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
 
-    .card-content {
-      padding: 20px;
-    }
+        .card-content h2 {
+            margin-right: 10px; /* Espaçamento entre o título e o parágrafo */
+            margin-bottom: 10px;
+        }
 
-    .card-content h3 {
-      margin-top: 0;
-      color: #333;
-    }
+        .card-content p {
+            margin: 0;
+        }
 
-    .card-content p {
-      color: #666;
-      display: none; /* Oculta a descrição por padrão */
-    }
+        .social-icons a {
+            text-decoration: none;
+            color: #333;
+            font-size: 20px;
+        }
 
-    .card-content a {
-      display: block;
-      margin-top: 15px;
-      text-decoration: none;
-      color: #3498db;
-      font-weight: bold;
-      cursor: pointer;
-    }
-  </style>
+        p{
+          margin: 0px !important;
+        }
+
+        .carrousel {
+          display: flex;
+          overflow: scroll;
+          scroll-snap-type: x mandatory;
+          gap: 12px;
+          scroll-padding: 10px;
+
+        }
+        .carrousel {
+          display: flex;
+          overflow: scroll;
+          scroll-snap-type: x mandatory;
+          gap: 12px;
+          scroll-padding: 12px;
+
+        }
+        .carrousel::-webkit-scrollbar {
+          display: none;
+          
+
+        }
+
+        .carrousel .item {
+          flex: 0 0 100%;
+          scroll-snap-align: start;
+          scroll-snap-stop: always;
+        }
+    </style>
 </head>
 <body>
-
-<div class="card">
-  <!-- Pode adicionar uma imagem se desejar -->
-  <!--<img src="sua-imagem.jpg" alt="Imagem do Card">-->
-
-  <div class="card-content">
-    <h3>Titulo do Card</h3>
-    <p>Descrição do seu card aqui. Pode incluir informações sobre seus links.</p>
-    <a onclick="toggleDescription()">Mostrar Descrição</a>
-  </div>
-</div>
-
-<script>
-  function toggleDescription() {
-    var description = document.querySelector('.card-content p');
-    var link = document.querySelector('.card-content a');
-
-    if (description.style.display === 'none') {
-      description.style.display = 'block';
-      link.textContent = 'Ocultar Descrição';
-    } else {
-      description.style.display = 'none';
-      link.textContent = 'Mostrar Descrição';
-    }
-  }
-</script>
-
+    <div class="card">
+      <div class="row">
+        <div class="col-12 carrousel">
+          <div class="item">
+            <img class="img-fluid" src="images/python.jpg" alt="">
+          </div>
+          <div class="item">
+            <img class="img-fluid" src="images/python.jpg" alt="">
+          </div>
+     
+        </div>
+        <div class="col-md-9">
+          <h5>Relógio</h5>
+          <p>Lorem ipsum dolor sit amet</p>
+        </div>
+        <div class="col-md-3">
+          <a href="" class="btn btn-primary">Icons</a>
+        </div>
+      </div>  
+    </div>
 </body>
 </html>
+
+
